# simple-ui-githubtool

./: Dockerfile  README.md  pyproject.toml  requirements.txt  sample_ini
api/: api_github.py  github_action.py
flaskr/: auth.py  blog.py  db.py
flaskr/templates/blog/: update.html
webGHT/: __init__.py  auth.py  blog.py  get_data.py  schema.sql  setting.py  tool.py  update_api_data.py
webGHT/static/: function.js  style.css
webGHT/templates/: base.html
webGHT/templates/auth/: login.html  register.html
webGHT/templates/blog/: create.html
webGHT/templates/setting/: profile.html
webGHT/templates/tool/: add_teams.html  branch_rules.html  branches.html  collaborators.html  create_branch.html  create_repo.html  index.html  webhooks.html
